files/manifests/dapNamespaceManifest.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dap
  labels:
    vendor: cyberark
    app: dap
