files/manifests/curlManifest.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curl
  namespace: demoapps
  labels:
    app: curl
spec:
  replicas: 1
  selector:
    matchLabels:
      role: demo
      app: curl
  template:
    metadata:
      labels:
        role: demo
        app: curl
    spec:
      serviceAccountName: curl-account
      shareProcessNamespace: true
      containers:
      - name: authenticator
        image: cyberark/conjur-authn-k8s-client
        imagePullPolicy: Always
        volumeMounts:
          - mountPath: /run/conjur
            name: conjur-access-token
      volumes:
        - name: conjur-access-token
          emptyDir:
            medium: Memory
