files/manifests/summonAppManifest.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: summon-app
  labels:
    vendor: cyberark
    app: summon

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: summon-app
  namespace: summon-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: summon-app
  template:
    metadata:
      labels:
        app: summon-app
    spec:
      serviceAccountName: summon-app-service-account
      containers:
      - name: authenticator
        image: cyberark/conjur-authn-k8s-client
        imagePullPolicy: Always
        volumeMounts:
          - mountPath: /run/conjur
            name: conjur-access-token
      - name: summon-app
        image: nginx
        imagePullPolicy: Always
        ports:
          - containerPort: 80
            protocol: TCP
        volumeMounts:
          - mountPath: /run/conjur
            name: conjur-access-token
            readOnly: true      
      volumes:
        - name: conjur-access-token
          emptyDir:
            medium: Memory
