files/manifests/dapAccessManifest.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dap-access-node
  namespace: dap
  labels:
    app: cyberark
spec:
  replicas: 1
  selector:
    matchLabels:
      role: access
  template:
    metadata:
      labels:
        role: access
    spec:
      serviceAccountName: conjur-cluster
      volumes:
      - name: seed
        configMap:
          name: seed
      containers:
      - name: node
        imagePullPolicy: IfNotPresent
        image: captainfluffytoes/dap:10.10
        ports:
          - containerPort: 443
            protocol: TCP
          - containerPort: 5432
            protocol: TCP
          - containerPort: 1999
            protocol: TCP
        volumeMounts:
          - mountPath: /seed
            name: seed
        resources:
          requests:
            memory: "1Gi"
            cpu: "250m"
          limits:
            memory: "2Gi"
            cpu: "500m"
            
---
apiVersion: v1
kind: Service
metadata:
  name: access
  namespace: dap
spec:
  ports:
  - name: https
    port: 443
    targetPort: 443
  selector:
    role: access
  type: ClusterIP
