files/manifests/gitlabManifest.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gitlab

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlabce
  namespace: gitlab
  labels:
    app: gitlab
spec:
  replicas: 1
  selector:
    matchLabels:
      scm: "yes"
      ci: "yes"
      app: "gitlab"
  template:
    metadata:
      labels:
        scm: "yes"
        ci: "yes"
        app: "gitlab"
    spec:
      serviceAccountName: gitlab-account
      containers:
      - name: main
        imagePullPolicy: Always
        image: gitlab/gitlab-ce
      - name: authenticator
        image: cyberark/conjur-authn-k8s-client
        imagePullPolicy: Always
        volumeMounts:
          - mountPath: /run/conjur
            name: conjur-access-token
      volumes:
        - name: conjur-access-token
          emptyDir:
            medium: Memory
        

---
apiVersion: v1
kind: Service
metadata:
  name: admin-page
  namespace: gitlab
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
  selector:
    app: gitlab
  type: ClusterIP

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab
  namespace: gitlab
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: gitlab.k8scluster.local
    http:
      paths:
      - path: /
        backend:
          serviceName: admin-page
          servicePort: 80
