files/manifests/gogsManifest.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gogs

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gogsce
  namespace: gogs
  labels:
    app: gogs
spec:
  replicas: 1
  selector:
    matchLabels:
      scm: "yes"
      ci: "no"
      app: "gogs"
  template:
    metadata:
      labels:
        scm: "yes"
        ci: "no"
        app: "gogs"
    spec:
      serviceAccountName: gogs-account
      containers:
      - name: main
        imagePullPolicy: Always
        image: gogs/gogs
        ports:
          - name: http
            containerPort: 3000
          - name: ssh
            containerPort: 22
      - name: authenticator
        image: cyberark/conjur-authn-k8s-client
        imagePullPolicy: Always
        volumeMounts:
          - mountPath: /run/conjur
            name: conjur-access-token
      volumes:
        - name: conjur-access-token
          emptyDir:
            medium: Memory
        

---
apiVersion: v1
kind: Service
metadata:
  name: admin-page
  namespace: gogs
spec:
  ports:
  - name: http
    port: 80
    targetPort: 3000
  - name: ssh
    port: 22
    targetPort: 22
  selector:
    app: gogs
  type: ClusterIP

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gogs
  namespace: gogs
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: gogs.k8scluster.local
    http:
      paths:
      - path: /
        backend:
          serviceName: admin-page
          servicePort: 80
