files/manifests/weaveIngressManifest.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: weave
  namespace: weave
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: weave.k8scluster.local
    http:
      paths:
      - path: /
        backend:
          serviceName: weave-scope-app
          servicePort: 80
